--- a/timwatch/style.css
+++ b/timwatch/style.css
@@ -7,5 +7,5 @@ div {
     border: 2px solid yellow;
     margin: 0;
     background-color: deepskyblue;
-    position:relative;
+    position:absolute;
 }
