--- a/timwatch/style.css
+++ b/timwatch/style.css
@@ -1,11 +1,22 @@
-div {
-    width: 30px;
-    height: 30px;
-    top: 20px;
-    left: 20px;
-    padding: 10px;
-    border: 2px solid yellow;
+html, body {
+    height: 100%;
     margin: 0;
-    background-color: deepskyblue;
+}
+
+body {
+    background: purple;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+div {
+    /*width: 50px;*/
+    /*height: 50px;*/
+    top: 2px;
+    left: 2px;
+    padding: 2px;
+    /*border: 2px solid yellow;*/
+    margin: 2px;
+    background-color: purple;
     position:absolute;
 }
